<resources>
    <string name="app_name">AndroidRESTClient</string>
    <string name="action_settings">Settings</string>

    <string name="firstName">First Name </string>
    <string name="lastName">Last Name </string>
    <string name="email">Email </string>
    <string name="post">Post </string>
    <string name="clear">Clear </string>
    <string name="retrieve">Retrieve </string>




</resources>
